<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Name (Max 10 characters)</string>
    <string name="marks_hint">Marks</string>
    <string name="total_marks_hint">Total Marks</string>
    <string name="weightage_hint">Weightage (Percentage)</string>
    <string name="submit_string">Submit!</string>
    <string name="add_string">+</string>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="gray">#6e6e6e</color>
    <string name="title_activity_add_subj">Add Subject</string>
    <string name="title_activity_result_summary">Results Summary</string>
    <string name="title_activity_add_assgm">Add Assignment</string>
    <string name="title_activity_subject_list">Subjects List</string>

</resources>
